Chapter11/k8s/api-server/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver-deployment
  labels:
    app: apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiserver
  template:
    metadata:
      labels:
        app: apiserver
    spec:
      containers:
        - name: apiserver
          livenessProbe:
            httpGet:
              path: /server_status
              port: 8000
          readinessProbe:
            httpGet:
              path: /server_status
              port: 8000
          image: asjadathick/recipe-search-service-api-server:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver-service
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: apiserver

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  defaultBackend:
    service:
      name: apiserver-service
      port:
        number: 8000
